[gd_scene load_steps=5 format=3 uid="uid://cq7lnkilcbj8p"]

[ext_resource type="Script" path="res://card.gd" id="1_s6jfy"]
[ext_resource type="Texture2D" uid="uid://1qvxey50gpu" path="res://assets/cards/s01.png" id="1_xewhw"]
[ext_resource type="Texture2D" uid="uid://b6rj41m366djb" path="res://assets/card_back.png" id="3_55p1q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85gi4"]
size = Vector2(77, 106)

[node name="Card" type="Area2D" groups=["cards"]]
script = ExtResource("1_s6jfy")

[node name="FaceSprite" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_xewhw")

[node name="BackSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_55p1q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_85gi4")

[connection signal="input_event" from="." to="." method="_on_input_event"]
